<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


  <ImageView
      android:layout_marginTop="60dp"
      android:id="@+id/twigaLogoImageView"
      android:layout_width="match_parent"
      android:layout_height="130dp"
      android:layout_gravity="center"
      app:srcCompat="@drawable/mpesa_logo"
      android:contentDescription="TODO" />

  <TextView
      android:id="@+id/tvHeader"
      android:layout_width="match_parent"
      android:textAlignment="center"
      android:textSize="25sp"
      android:layout_marginTop="30dp"
      android:layout_below="@id/twigaLogoImageView"
      android:textStyle="normal"
      android:textColor="@color/Black"
      android:fontFamily="@font/oxygen_bold"
      android:layout_height="wrap_content"
      android:text="@string/enter_transaction_details_to_complete" />



  <LinearLayout
      android:layout_marginTop="20dp"
      android:orientation="vertical"
      android:layout_below="@+id/tvHeader"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/enter_phone_number"
        android:layout_marginStart="10dp"
        android:textColor="@color/Black"
        android:textSize="12sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/number"
        android:background="@drawable/bg_gray"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_your_mobile_number"
        android:inputType="textPersonName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/amount_to_pay"
        android:textColor="@color/Black"
        android:textSize="12sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/total_amount"
        android:background="@drawable/bg_gray"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/choose_your_pick_up_point"
        android:textColor="@color/Black"
        android:textSize="12sp"
        android:textStyle="normal" />


    <Spinner
        android:id="@+id/yourLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/bg_transparent"
        android:entries="@array/items_class"
        android:hint="@string/your_location_pick_up_point"
        android:inputType="textPersonName"
        />

  </LinearLayout>


  <Button
      android:id="@+id/button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true"
      android:layout_marginBottom="11dp"
      android:layout_marginStart="6dp"
      android:background="@drawable/bg_black_button"
      android:textSize="16sp"
      android:fontFamily="@font/oxygen_bold"
      android:text="@string/click_to_pay"
      android:layout_marginTop="32dp"
      android:textColor="@color/White" />


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

  </LinearLayout>
</RelativeLayout>
